FIX: contrast issue on homepage

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -118,7 +118,10 @@ a {
 /* 5. Home page */
 
 #hero-section {
-    background: url(/static/img/hero_image.jpg) no-repeat center;
+    background-color: var(--clr-dark);
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(/static/img/hero_image.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
     background-size: cover;
     height: 50vh;
     padding: 0;
